# fitbit-data-pipeline

./: .env  .gitignore  LICENSE  README.md  __all_fitbit_ss.csv  __all_heart_rate.csv  __all_intraaday_data_.csv  __all_sleep_data.csv  __all_step_counts.csv  app_server.py  citation.cff  config.py  main.py  main_project.py  participants.csv~  pyproject.toml  requirements.txt
fitbit_data_pipeline/: Utility.py  cli.py  runner.py
fitbit_data_pipeline/Classes/: DataCollector.py  PManager.py  Participant.py
fitbit_data_pipeline/auth/: app_server.py
fitbit_pipeline/: .env  Utility.py  __init__.py  participants.json  runner.py
fitbit_pipeline/Classes/: DataCollector.py  Init.py  PManager.py
raw_sleep_data/: SDP02_2024-11-05_to_2024-11-13.json  SDP03_2024-11-05_to_2024-11-13.json
sample_files/: .env_  config_.py  participants_.csv
